# Python-M203

mylibrary/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
mylibrary/docs/: Makefile  conf.py  example.ipynb  make.bat
mylibrary/src/mylibrary/: __init__.py
mylibrary/tests/: test_mylibrary.py
