[tool.poetry]
name = "mylibrary"
version = "0.0.0"
description = "A very simple but cool package!"
authors = ["Raphael Corchia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
